<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="51dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabUnselected">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true"
            android:text="@string/top_rated"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/themeWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/top_rate_show_all"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <TextView
                    android:text="Show all"
                    android:textColor="@color/themeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#D3D3D3" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/topRatedRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#D3D3D3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabUnselected">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/popular"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/themeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/popular_show_all"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <TextView
                    android:text="Show all"
                    android:textColor="@color/themeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#D3D3D3" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popularRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#D3D3D3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabUnselected">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/now_playing"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/themeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/now_playing_show_all"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <TextView
                    android:text="Show all"
                    android:textColor="@color/themeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#D3D3D3" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/nowPlayingRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#D3D3D3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabUnselected">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"
                android:text="@string/upcoming"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/themeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/upcoming_show_all"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <TextView
                    android:text="Show all"
                    android:textColor="@color/themeWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="#D3D3D3" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/upcomingRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#D3D3D3" />

    </LinearLayout>

</LinearLayout>
</ScrollView>